--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 body {
-  padding: 80px 0;
+  /* padding: 80px 0; */
   margin: auto;
   box-sizing: border-box;
   text-align: center;
@@ -30,6 +30,7 @@ ul {
   height: center;
   width: 50%;
   margin: auto;
+  margin-top: 20px;
   border-radius: 50px;
   padding: 20px;
   background-color: rgb(133, 231, 198);
